# CompletePay-SaaS

./: .gitignore  README.md  package-lock.json  package.json  security_best_practices_report.md  vercel.json
apps/backend/: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent_estruturado.py  agent_os.py  agno-agent-architecture.md  agno_agent.py  evals_saude.py  nixpacks.toml  package.json  pyproject.toml  requirements.txt  schemas_io.py  seed_domain.py  test_calendar500.py  test_forgot.py  vercel.json  verify_webhook.py  webhook_test.json
apps/backend/docker/: Dockerfile  docker-compose.full-stack.yml  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  init-pgvector.sql  postgresql.conf  prometheus.yml
apps/backend/scripts/: create_crm_clinical_evolutions.sql  create_crm_exam_requests.sql  create_crm_payments.sql  create_crm_prescriptions.sql  health_check.py  migrate_db.py  seed_knowledge.py  slow_queries.sql
apps/backend/src/: __init__.py  app.py  health.py
apps/backend/src/agents/: __init__.py  base.py  fraud_agent.py  payment_agent.py  support_agent.py
apps/backend/src/api/: __init__.py  app.py  deps.py
apps/backend/src/auth/: CLAUDE.md  __init__.py  repository.py  service.py
apps/backend/src/cache/: __init__.py
apps/backend/src/cli/: __init__.py  main.py
apps/backend/src/config/: CLAUDE.md  __init__.py  database.py  features.py  logging_config.py  models.py  sentry_config.py  settings.py  telemetry.py
apps/backend/src/db/: CLAUDE.md  __init__.py  models.py  models_automations.py  models_calendar.py  models_crm.py  models_marketing.py  models_whatsapp.py  session.py
apps/backend/src/guardrails/: __init__.py  input_validators.py  output_sanitizers.py  pii_detector.py  transaction_limits.py
apps/backend/src/knowledge/: __init__.py  setup.py
apps/backend/src/models/: __init__.py  account.py  compliance.py  payment.py  support.py
apps/backend/src/organizations/: CLAUDE.md  __init__.py  service.py
apps/backend/src/providers/: __init__.py
apps/backend/src/schemas/: CLAUDE.md  agent.py  automations.py  calendar.py  crm.py  marketing.py  organization.py  whatsapp.py
apps/backend/src/services/: CLAUDE.md  __init__.py  audit_service.py  automation_service.py  availability_engine.py  avatar_storage.py  booking_service.py  email_service.py  (+11 more)
apps/backend/tests/: CLAUDE.md  conftest.py
(+422 files in other folders)
